2004-07-09  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed the distributions.  The one change is that exponential now
	takes a scale parameter, giving you data in [0,scale], with lambda
	describing the fall-off rate.

	* We now support uniform, triangular, exponential, and normal
	distributions.  The latter two, however, appear to be somewhat
	broken- we'll fix it later.

	* Added the Random template class for random number generation.
	The template takes a generator as a parameter and lets the user
	have n number of independent generation streams.  The currently
	supported generators are:  

	1.  LCG:  2^31 period, reversible, 1 state word.

	2.  KISS:  2^127 period, not reversible, 5 state words.

	3.  Mersenne Twist:  2^19337 period, reversible, 625 state words.

	The Random class lets the user generate numbers, load/save state
	to a stream, and generate numbers in reverse (if supported).  To
	do:  Add various distributions.

	* Removed the Random class from the regress directories and
	modified necessary tests to use the new Random class.

2004-07-07  Brian Kahne  <bkahne@ibmoto.com>

	* Added the ability to name Processor objects.  The memory is
	unmanaged, so you can just allocate from the GC and you can
	compare pointers for fast identification.

	* The QueueChan class is now templated on its container type.  The
	default is to use a list.

	* Modified all STL containers to use traceable_allocator.

2004-07-06  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug w/busy-okay:  If we turned off preemption due to
	setting ConfigParms::_busyokay, it could be turned on again by
	GC_startworld.  Fixed this by adding a static member to Cluster
	that is set when we process the config parms to indicate that
	preemption should stay off..

2004-07-02  Brian Kahne  <bkahne@ibmoto.com>

	* Modified the basic Channel template to support multiple
	producers.  Added chan17 to test this.  This simply meant
	converting over to having a vector of waiting writers, just like