@@ -690,7 +690,7 @@ fall-off rate.</dd>
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="user-guide.rst">View document source</a>.
-Generated on: 2004/07/12 10:26:37 CDT.
+Generated on: 2004/07/12 16:53:58 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
