@@ -1,0 +1,54 @@
+//
+// Simple test of clocked channels- are reads limited to 
+// clock edges?
+//
+
+#include "plasma.h"
+
+using namespace plasma;
+using namespace std;
+
+typedef ClockChan<int> IntChan;
+
+void producer(int val,IntChan &chan) 
+{
+  for (int i = 0; i != 10; ++i) {
+    chan.write(val+i);
+    for (int j = 0; j != 100000; ++j) {
+      int x = x + 1;
+    }
+  }
+  chan.write(-1);
+  plasma::mprintf ("Producer done.\n");
+}
+
+void consumer(IntChan &c)
+{
+  bool done = false;
+  while (!done) {
+    int d = c.get();
+    if (d < 0) { 
+      done = true; 
+    } else {
+      mprintf ("Got a value from port c0 at time %lld:  %d\n",pTime(),d);
+    }
+  }
+  plasma::mprintf ("Consumer done.\n");
+}
+
+void pSetup(ConfigParms &cp)
+{
+  cp._busyokay = true;
+}
+
+int pMain(int argc,const char *argv[])
+{ 
+  IntChan chan(5);
+
+  par {
+    producer(10,chan);
+    consumer(chan);
+  }
+  plasma::mprintf ("Done.\n");
+  return 0;
+}
